fix: use common-lib